Closed Bug 1374129 Opened 7 years ago Closed 7 years ago

Failing to initialise content script on popup window

Categories

(WebExtensions :: Frontend, defect)

56 Branch
defect
Not set
normal

Tracking

(firefox56 fixed)

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: mp3geek, Assigned: kmag)

References

Details

Attachments

(2 files)

Attached video 2017-06-18 12-02-20.avi
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:56.0) Gecko/20100101 Firefox/56.0
Build ID: 20170617103008

Steps to reproduce:

Using the Webextension Gesturefy; https://addons.mozilla.org/en-US/firefox/addon/gesturefy/

Visit:

http://www.top10tvboxes.com/s905x-vs-s905-which-is-faster-and-better-android-tv-box/

On the left hand side, click on 'Best Octa-core TV Boxes' under the "Best-sellers 2017" menu, this will open a new web page.

New web page won't allow gestures to work.

Video of the issue: https://www.youtube.com/watch?v=fkfT-KeaxV0

Issue report: https://github.com/Robbendebiene/Gesturefy/issues/13



Actual results:

Gesturefy fails to fire on new window.


Expected results:

Webextension should work with popup window.

Error received (https://github.com/Robbendebiene/Gesturefy/issues/13)

TypeError: context.contentWindow is null[Learn More]  ExtensionContent.jsm:317:9
TypeError: win is null[Learn More]  ExtensionUtils.jsm:143:3
Component: Untriaged → WebExtensions: Frontend
Product: Firefox → Toolkit
investigating
Flags: needinfo?(amckay)
If I remove match_about_blank in the manifest, this now works:


~/sandboxes/Gesturefy/src g diff
diff --git a/src/manifest.json b/src/manifest.json
index bbd961b..2dcb748 100644
--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,7 +31,6 @@
     {
       "matches": ["<all_urls>"],
       "run_at": "document_start",
-      "match_about_blank": true,
       "css": [
         "lib/injection.css"
       ],

Zombie any ideas?
Flags: needinfo?(amckay) → needinfo?(tomica)
Summary: Failing to initialise Webextension on popup window → Failing to initialise content script on popup window
Hm, if this is recent, it's likely fallout from bug 1368102.

Will investigate more.
Assignee: nobody → tomica
Flags: needinfo?(tomica)
The issue seems to be that when match_about_blank is on, we seem to be trying to inject into popup's about:blank document too early, before there's even a document there.

This might need to be fixed and uplifted soon, but I'm traveling tomorrow, so asking Kris agreed to take it.
Assignee: tomica → kmaglione+bmo
Attachment #8880201 - Flags: review?(tomica) → review?(aswan)
Comment on attachment 8880201 [details]
Bug 1374129: Avoid loading content scripts into uninitialized about:blank documents.

https://reviewboard.mozilla.org/r/151572/#review156968

Trusting Kris's comment on IRC that a subsequent `"content-document-global-created"` should be triggered for an `about:blank` document that is uninitialized...
Attachment #8880201 - Flags: review?(aswan) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/f01fd53c5e1cc3524e33e39cb7d2bf81820d4e61
Bug 1374129: Avoid loading content scripts into uninitialized about:blank documents. r=aswan
https://hg.mozilla.org/mozilla-central/rev/f01fd53c5e1c
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Product: Toolkit → WebExtensions
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: