Bug 1374129: Avoid loading content scripts into uninitialized about:blank documents. r=aswan

MozReview-Commit-ID: LN1E4Q5xAbO